# ndvi-app

./: .replit  index.html  main.py  models.py  pyproject.toml  requirements.txt
